--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
     <script src="build/build_scripts/build_script.js" defer></script>
   </head>
+
   <body class="antialiased">
     <!-- * NAVIGATION BAR-->
     <header
       id="test"
-      class="md:flex md:justify-between bg-blue-400 md:py-2 md:px-4"
+      class="md:flex md:justify-between bg-indigo-400 md:py-2 md:px-4"
     >
       <div class="flex items-center justify-between py-2 px-4 md:p-0">
         <a href="index.html">
@@ -44,7 +45,7 @@
               viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <title>Menu</title>
+              <title>Menü</title>
               <path
                 v-if="!isOpen"
                 d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
@@ -95,26 +96,35 @@
       >
         <!-- * WILLKOMMEN TEXT -->
         <div
-          class="leading-none w-4/5 md:w-3/4 lg:w-7/12 font-hairline self-start"
+          class="leading-none w-full md:w-11/12 xl:w-7/12 font-hairline self-start text-sm sm:text-base"
         >
           <div class="">
-            <h1 class="text-2xl md:text-4xl w-3/4">
-              Herzlich Willkommen bei www.autocenter-lichtenfels.de
+            <h1 class="text-xl sm:text-2xl md:text-4xl mb-4 md:mb-6 xl:w-4/5">
+              Herzlich Willkommen bei <br />
+              www.autocenter-lichtenfels.de
             </h1>
             <p class="mb-2 leading-none w-4/5">
               Sind Sie auf der Such nach einem neuen oder gebrauchten Fahrzeug?
-              Sie möchten ihr altes Fahrzeug verkaufen oder in Zahlung geben?
+              <br />
+              Möchten Sie ihr altes Fahrzeug verkaufen oder in Zahlung geben?
             </p>
           </div>
           <p class="my-2">
             Dann sind Sie herzlich willkommen beim Autocenter in Lichtenfels.
+            <br />
+            Wir kaufen und verkaufen gepflegte Fahrzeuge verschiedenster Marken
+            und Modelle.
           </p>
+          <p>
+            Wir freuen uns auf Ihren Anruf oder Ihr Angebot per Kontaktformular
+          </p>
+          <p class="leading-snug">Ihr Thomas Knorr</p>
         </div>
 
         <!-- * CTA -->
-        <div class="container w-3/4 sm:w-7/12 lg:w-5/12 mt-10 self-start">
+        <div class="container w-5/6 sm:w-8/12 lg:w-6/12 mt-10 self-start">
           <div
-            class="flex flex-col sm:flex-row items-start sm:items-center rounded-md p-4"
+            class="flex flex-col md:flex-row items-start md:items-center rounded-md p-4"
             style="
               box-shadow: rgba(50, 50, 93, 0.1) 0px 15px 35px,
                 rgba(0, 0, 0, 0.07) 0px 5px 15px;
@@ -123,14 +133,14 @@
             <div class="flex-1 leading-tight">
               <p class="text-gray-900 text-md mb-3">
                 <strong>Telefon: </strong>
-                09571 - 755 130
+                <br class="md:hidden" />09571 - 755 130
               </p>
               <p class="text-sm text-gray-700">
                 <strong>E Mail: </strong>
-                info@autocenter-lichtenfels.de
+                <br class="md:hidden" />info@autocenter-lichtenfels.de
               </p>
             </div>
-            <div class="flex-initial mt-6 sm:mt-0">
+            <div class="flex-initial mt-6 md:mt-0">
               <a href="build/build_pages/contact.html">
                 <button
                   class="py-2 px-4 bg-indigo-700 hover:bg-indigo-600 text-base text-white font-bold uppercase rounded shadow-md hover:-translate-1"
@@ -143,7 +153,7 @@
         </div>
 
         <!-- * SERVICE -->
-        <div class="flex flex-col mt-10 md:mt-16">
+        <div class="flex flex-col mt-12 md:mt-18">
           <h2 class="text-4xl self-center">Service</h2>
           <div class="flex flex-wrap">
             <div class="w-full sm:w-1/2 md:w-1/3 p-3">
@@ -196,24 +206,27 @@
         </div>
 
         <!-- * NAVIGATION -->
-        <div class="flex flex-col w-full mb-16 md:mb-24">
-          <h2 class="text-4xl self-center">Navigation</h2>
-          <div class="text-gray-700 relative flex flex-col">
-            <div class="absolute inset-0 bg-gray-300">
+        <div class="flex flex-col w-full mt-8 sm:mt-10 lg:mt-12 mb-16 md:mb-24">
+          <h2 class="text-4xl self-center mb-2">Navigation</h2>
+          <div
+            class="text-gray-700 relative flex flex-col vh-60 lg:min-h-screen"
+          >
+            <div class="container absolute inset-0">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2557.187721951104!2d11.049411316449707!3d50.13891997943358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a22ca450fc6aa3%3A0x452324fb2bf96dfe!2sThomas%20Knorr!5e0!3m2!1sen!2sde!4v1595151708756!5m2!1sen!2sde"
                 width="100%"
                 height="100%"
+                class="absolute inset-0"
                 frameborder="0"
-                style="border: 0;"
-                scrolling="no"
-                tabindex="0"
-                style="filter: grayscale(1) contrast(1.2) opacity(0.4);"
+                title="map"
+                marginheight="0"
+                marginwidth="0"
+                style="border-radius: 6px;"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5576.563092134364!2d11.047480559893545!3d50.14494884750321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a22ca450fc6aa3%3A0x452324fb2bf96dfe!2sThomas%20Knorr!5e0!3m2!1sen!2sde!4v1595240209608!5m2!1sen!2sde"
               ></iframe>
             </div>
             <div class="container px-5 py-24 mx-auto flex">
               <div
-                class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10"
+                class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 lg:flex hidden flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 bg-opacity-95"
               >
                 <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">
                   Kontakt aufnehmen
