--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
     <!-- * NAVIGATION BAR-->
     <header
       id="test"
-      class="md:flex md:justify-between bg-indigo-400 md:py-2 md:px-4"
+      class="bg-blue-400 md:flex md:justify-between md:py-2 md:px-4"
     >
-      <div class="flex items-center justify-between py-2 px-4 md:p-0">
+      <div class="flex items-center justify-between px-4 py-2 md:p-0">
         <a href="index.html">
           <img
             src="/img/image.svg"
@@ -38,10 +38,10 @@
         <div class="block md:hidden">
           <button
             @click="isOpen = !isOpen"
-            class="flex items-center px-3 py-2 border rounded text-indigo-200 border-indigo-400 hover:text-white hover:border-white focus:outline-none"
+            class="flex items-center px-3 py-2 text-blue-900 border border-blue-700 rounded hover:text-white hover:border-white focus:outline-none"
           >
             <svg
-              class="fill-current h-3 w-3"
+              class="w-3 h-3 text-blue-900"
               viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -68,42 +68,41 @@
       >
         <a
           href="#"
-          class="block px-2 py-1 mt-1 text-white font-semibold hover:bg-indigo-400 rounded ml-1"
+          class="block px-2 py-1 mt-1 ml-1 font-semibold text-white bg-blue-600 rounded"
           >Startseite</a
         >
         <!-- <a
           href="#"
-          class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-indigo-400 rounded ml-1"
+          class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-400"
           >Service</a
         > -->
         <a
           href="build/build_pages/routenplaner.html"
-          class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-indigo-400 rounded ml-1"
+          class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-500"
           >Routenplaner</a
         >
         <a
           href="build/build_pages/contact.html"
-          class="mt-1 block px-2 py-1 text-white font-semibold hover:bg-indigo-400 rounded ml-1"
+          class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-500"
           >Kontakt</a
         >
       </div>
     </header>
 
     <!-- * MAIN CONTAINER -->
-    <div class="container mx-auto px-6 md:px-10 lg:px-16">
+    <div class="container px-6 mx-auto md:px-10 lg:px-16">
       <div
-        class="min-h-screen flex flex-col items-center pt-12 sm:pt-18 md:pt-24"
+        class="flex flex-col items-center min-h-screen pt-12 sm:pt-18 md:pt-24"
       >
         <!-- * WILLKOMMEN TEXT -->
         <div
-          class="leading-none w-full md:w-11/12 xl:w-7/12 font-hairline self-start text-sm sm:text-base"
+          class="self-start w-full text-sm font-hairline leading-none md:w-11/12 xl:w-7/12 sm:text-base"
         >
           <div class="">
-            <h1 class="text-xl sm:text-2xl md:text-4xl mb-4 md:mb-6 xl:w-4/5">
-              Herzlich Willkommen bei <br />
-              www.autocenter-lichtenfels.de
+            <h1 class="mb-4 text-2xl md:text-4xl md:mb-6 xl:w-4/5">
+              Herzlich Willkommen!
             </h1>
-            <p class="mb-2 leading-none w-4/5">
+            <p class="w-4/5 mb-2 leading-none">
               Sind Sie auf der Such nach einem neuen oder gebrauchten Fahrzeug?
               <br />
               Möchten Sie ihr altes Fahrzeug verkaufen oder in Zahlung geben?
@@ -122,16 +121,18 @@
         </div>
 
         <!-- * CTA -->
-        <div class="container w-5/6 sm:w-8/12 lg:w-6/12 mt-10 self-start">
+        <div
+          class="container self-start w-5/6 mt-12 sm:w-8/12 lg:w-6/12 md:mt-24"
+        >
           <div
-            class="flex flex-col md:flex-row items-start md:items-center rounded-md p-4"
+            class="flex flex-col items-start p-4 rounded-md md:flex-row md:items-center"
             style="
               box-shadow: rgba(50, 50, 93, 0.1) 0px 15px 35px,
                 rgba(0, 0, 0, 0.07) 0px 5px 15px;
             "
           >
             <div class="flex-1 leading-tight">
-              <p class="text-gray-900 text-md mb-3">
+              <p class="mb-3 text-gray-900 text-md md:mb-0">
                 <strong>Telefon: </strong>
                 <br class="md:hidden" />09571 - 755 130
               </p>
@@ -143,7 +144,7 @@
             <div class="flex-initial mt-6 md:mt-0">
               <a href="build/build_pages/contact.html">
                 <button
-                  class="py-2 px-4 bg-indigo-700 hover:bg-indigo-600 text-base text-white font-bold uppercase rounded shadow-md hover:-translate-1"
+                  class="px-4 py-2 text-base font-bold text-white uppercase transition duration-150 bg-blue-500 rounded shadow-md hover:bg-blue-600 hover:-translate-1"
                 >
                   Kontakt
                 </button>
@@ -153,51 +154,61 @@
         </div>
 
         <!-- * SERVICE -->
-        <div class="flex flex-col mt-12 md:mt-18">
-          <h2 class="text-4xl self-center">Service</h2>
+        <div class="flex flex-col mt-16 sm:mt-20 md:mt-24">
+          <h2 class="self-center text-3xl md:text-4xl">Service</h2>
           <div class="flex flex-wrap">
-            <div class="w-full sm:w-1/2 md:w-1/3 p-3">
-              <h4 class="text-2xl text-indigo-700">Wir kaufen Ihr Fahrzeug!</h4>
-              <p class="">
+            <div class="w-full p-3 sm:w-1/2 md:w-1/3">
+              <h4 class="text-xl text-blue-700 sm:text-2xl">
+                Wir kaufen Ihr Fahrzeug!
+              </h4>
+              <p class="text-sm md:text-base">
                 Wir kaufen und verkaufen gepflegte Fahrzeuge verschiedenster
                 Marken und Modelle. Bieten Sie uns ihr gebrauchtes Fahrzeug an!
               </p>
             </div>
-            <div class="w-full sm:w-1/2 md:w-1/3 p-3">
-              <h4 class="text-2xl text-indigo-700">Beurteilung</h4>
-              <p class="">
+            <div class="w-full p-3 sm:w-1/2 md:w-1/3">
+              <h4 class="text-xl text-blue-700 sm:text-2xl">
+                Beurteilung
+              </h4>
+              <p class="text-sm md:text-base">
                 Auf Ihren Wunsch stellen wir eine qualifizierte
                 Ankaufsbewertung, sowie Begutachtung Ihres Fahrzeugs aus
               </p>
             </div>
-            <div class="w-full sm:w-1/2 md:w-1/3 p-3">
-              <h4 class="text-2xl text-indigo-700">Reifenwechsel</h4>
-              <p class="">
+            <div class="w-full p-3 sm:w-1/2 md:w-1/3">
+              <h4 class="text-xl text-blue-700 sm:text-2xl">
+                Reifenwechsel
+              </h4>
+              <p class="text-sm md:text-base">
                 Durch unseren ganzjährig Reifenwechselservice können Sie sich
                 entspannt zurück lehnen, während wir die Reifen Ihres Pkws
                 wechseln
               </p>
             </div>
-            <div class="w-full sm:w-1/2 md:w-1/3 p-3">
-              <h4 class="text-2xl text-indigo-700">Transport</h4>
-              <p class="">
+            <div class="w-full p-3 sm:w-1/2 md:w-1/3 md:pb-0">
+              <h4 class="text-xl text-blue-700 sm:text-2xl">
+                Transport
+              </h4>
+              <p class="text-sm md:text-base">
                 Abholung Ihres Fahrzeugs von Zuhause oder am Arbeitsplatz, sowie
                 Überführung Ihres Fahrzeugs mit eigenem Autotransporter oder
                 rotem Kennzeichen
               </p>
             </div>
-            <div class="w-full sm:w-1/2 md:w-1/3 p-3">
-              <h4 class="text-2xl text-indigo-700">
+            <div class="w-full p-3 sm:w-1/2 md:w-1/3 md:pb-0">
+              <h4 class="text-xl text-blue-700 sm:text-2xl">
                 Instandsetzung und Reparatur
               </h4>
-              <p class="">
+              <p class="text-sm md:text-base">
                 Komplette Fahrzeugaufbereitung und Entfernung von Dellen oder
                 Hagelschäden
               </p>
             </div>
-            <div class="w-full sm:w-1/2 md:w-1/3 p-3">
-              <h4 class="text-2xl text-indigo-700">Abmeldung</h4>
-              <p class="">
+            <div class="w-full p-3 sm:w-1/2 md:w-1/3 md:pb-0">
+              <h4 class="text-xl text-blue-700 sm:text-2xl">
+                Abmeldung
+              </h4>
+              <p class="text-sm md:text-base">
                 Wenn Sie es sich wünschen, melden wir Ihr Fahrzeug ab und
                 stellen Ihnen einen schriftlichen Nachweis zur verfügung
               </p>
@@ -206,10 +217,10 @@
         </div>
 
         <!-- * NAVIGATION -->
-        <div class="flex flex-col w-full mt-8 sm:mt-10 lg:mt-12 mb-16 md:mb-24">
-          <h2 class="text-4xl self-center mb-2">Navigation</h2>
+        <div class="flex flex-col w-full mt-16 mb-16 md:mt-24 md:mb-24">
+          <h2 class="self-center mb-2 text-3xl md:text-4xl">Navigation</h2>
           <div
-            class="text-gray-700 relative flex flex-col vh-60 lg:min-h-screen"
+            class="relative flex flex-col text-gray-700 vh-60 lg:min-h-screen"
           >
             <div class="container absolute inset-0">
               <iframe
@@ -224,28 +235,28 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5576.563092134364!2d11.047480559893545!3d50.14494884750321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a22ca450fc6aa3%3A0x452324fb2bf96dfe!2sThomas%20Knorr!5e0!3m2!1sen!2sde!4v1595240209608!5m2!1sen!2sde"
               ></iframe>
             </div>
-            <div class="container px-5 py-24 mx-auto flex">
+            <div class="container flex px-5 py-24 mx-auto">
               <div
-                class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 lg:flex hidden flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 bg-opacity-95"
+                class="relative z-10 flex-col hidden w-full p-8 mt-10 bg-white rounded-lg lg:w-1/3 md:w-1/2 lg:flex md:ml-auto md:mt-0 bg-opacity-95"
               >
-                <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">
+                <h2 class="mb-1 text-lg font-medium text-gray-900 title-font">
                   Kontakt aufnehmen
                 </h2>
                 <input
-                  class="bg-white rounded border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4"
+                  class="px-4 py-2 mb-4 text-base bg-white border border-gray-400 rounded focus:outline-none focus:border-blue-500"
                   placeholder="E Mail"
                   type="email"
                 />
                 <textarea
-                  class="bg-white rounded border border-gray-400 focus:outline-none h-32 focus:border-indigo-500 text-base px-4 py-2 mb-4 resize-none"
+                  class="h-32 px-4 py-2 mb-4 text-base bg-white border border-gray-400 rounded resize-none focus:outline-none focus:border-blue-500"
                   placeholder="Nachricht"
                 ></textarea>
                 <button
-                  class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"
+                  class="px-6 py-2 text-lg text-white bg-blue-500 border-0 rounded focus:outline-none hover:bg-blue-600"
                 >
                   Absenden
                 </button>
-                <!-- <p class="text-xs text-gray-500 mt-3"></p> -->
+                <!-- <p class="mt-3 text-xs text-gray-500"></p> -->
               </div>
             </div>
           </div>
@@ -255,39 +266,52 @@
 
     <!-- * FOOTER -->
     <footer class="text-white">
-      <div class="flex justify-between items-center p-4 bg-gray-700">
-        <div class="flex-initial text-xl font-semibold">
+      <div
+        class="flex items-center justify-between px-4 py-2 leading-relaxed bg-gray-700"
+      >
+        <div class="flex-initial font-semibold text-md">
           Autocenter Lichtenfels
         </div>
         <div>
-          <ul class="flex flex-col sm:flex-row text-sm -mx-3 font-medium">
+          <ul class="flex flex-col -mx-3 text-sm font-thin sm:flex-row">
             <li class="mx-3">
-              <a href="#" class="hover:underline">Startseite</a>
+              <a href="#" class="border-b border-gray-400 hover:underline"
+                >Startseite</a
+              >
+            </li>
+            <li class="mx-3">
+              <a
+                href="build/build_pages/routenplaner.html"
+                class="hover:underline"
+                >Routenplaner</a
+              >
             </li>
             <li class="mx-3">
               <a href="build/build_pages/contact.html" class="hover:underline"
                 >Kontakt</a
               >
             </li>
-            <li class="mx-3">©2020 Autocenter Lichtenfels</li>
+            <li class="mx-3">
+              <a href="#" class="hover:underline">Sitemap</a>
+            </li>
           </ul>
         </div>
       </div>
 
       <div
-        class="w-full px-4 py-2 text-xs font-light bg-black flex flex-col sm:flex-row justify-between items-start md:items-center"
+        class="flex flex-col items-start justify-between w-full px-4 py-2 text-xs font-light bg-black sm:flex-row md:items-center"
       >
         <div>
           <strong class="font-bold">Tel.: </strong>
-          09571 - 755 130
-          <strong class="ml-3 font-bold">E Mail: </strong>
+          09571 - 755 130<br />
+          <strong class="font-bold">E-Mail: </strong>
           <a href="#" class="hover:underline">
             info@autocenter-lichtenfels.de
           </a>
         </div>
-        <div>
+        <div class="flex">
           <a href="http://127.0.0.1:8080/" class="hover:underline">
-            www.autocenter-lichtenfels.de
+            ©2020 Autocenter Lichtenfels
           </a>
         </div>
       </div>
