changed html savespace

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="flex items-center justify-between px-4 py-2 md:p-0">
         <a href="index.html">
           <img
-            src="/img/image.svg"
+            src="public/img/image.svg"
             alt="Autocenter Lichtenfels Logo"
             class="h-8 pr-4"
           />
@@ -77,12 +77,12 @@
           >Service</a
         > -->
         <a
-          href="build/build_pages/routenplaner.html"
+          href="public/build/build_pages/routenplaner.html"
           class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-500"
           >Routenplaner</a
         >
         <a
-          href="build/build_pages/contact.html"
+          href="public/build/build_pages/contact.html"
           class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-500"
           >Kontakt</a
         >
@@ -142,7 +142,7 @@
               </p>
             </div>
             <div class="flex-initial mt-6 md:mt-0">
-              <a href="build/build_pages/contact.html">
+              <a href="public/build/build_pages/contact.html">
                 <button
                   class="px-4 py-2 text-base font-bold text-white uppercase transition duration-150 bg-blue-500 rounded shadow-md hover:bg-blue-600 hover:-translate-1"
                 >
@@ -281,13 +281,15 @@
             </li>
             <li class="mx-3">
               <a
-                href="build/build_pages/routenplaner.html"
+                href="public/build/build_pages/routenplaner.html"
                 class="hover:underline"
                 >Routenplaner</a
               >
             </li>
             <li class="mx-3">
-              <a href="build/build_pages/contact.html" class="hover:underline"
+              <a
+                href="public/build/build_pages/contact.html"
+                class="hover:underline"
                 >Kontakt</a
               >
             </li>
