--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5, minimum-scale=1"
     />
+    <meta name="description" content="Autowerkstatt Lichtenfels" />
     <title>Autocenter Lichtenfels</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -25,7 +26,7 @@
       <!-- * NAVIGATION BAR-->
       <header
         id="test"
-        class="bg-blue-400 md:flex md:justify-between md:py-2 md:px-4"
+        class="bg-gray-400 md:flex md:justify-between md:py-2 md:px-4"
       >
         <div class="flex items-center justify-between px-4 py-2 md:p-0">
           <a href="index.html">
@@ -39,10 +40,10 @@
           <div class="block md:hidden">
             <button
               @click="isOpen = !isOpen"
-              class="flex items-center px-3 py-2 text-blue-900 border border-blue-700 rounded hover:text-white hover:border-white focus:outline-none"
+              class="flex items-center px-3 py-2 text-gray-800 border border-gray-800 rounded hover:text-white hover:border-gray-200 focus:outline-none"
             >
               <svg
-                class="w-3 h-3 text-blue-900"
+                class="w-3 h-3 fill-current"
                 viewBox="0 0 20 20"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -65,26 +66,26 @@
 
         <div
           :class="isOpen ? 'block' : 'hidden'"
-          class="px-2 pt-2 pb-4 md:flex md:p-0"
+          class="px-2 pt-2 pb-4 text-gray-900 md:flex md:p-0"
         >
           <a
             href="#"
-            class="block px-2 py-1 mt-1 ml-1 font-semibold text-white bg-blue-600 rounded"
+            class="block px-2 py-1 mt-1 ml-1 font-semibold bg-gray-500 rounded"
             >Startseite</a
           >
           <!-- <a
           href="#"
-          class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-400"
+          class="block px-2 py-1 mt-1 ml-1 font-semibold rounded hover:bg-gray-400"
           >Service</a
         > -->
           <a
             href="public/build/build_pages/routenplaner.html"
-            class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-500"
+            class="block px-2 py-1 mt-1 ml-1 font-semibold rounded hover:bg-gray-500"
             >Routenplaner</a
           >
           <a
             href="public/build/build_pages/contact.html"
-            class="block px-2 py-1 mt-1 ml-1 font-semibold text-white rounded hover:bg-blue-500"
+            class="block px-2 py-1 mt-1 ml-1 font-semibold rounded hover:bg-gray-500"
             >Kontakt</a
           >
         </div>
@@ -95,7 +96,7 @@
         <div class="flex flex-col items-center py-12 sm:pt-18 md:pt-24">
           <!-- * WILLKOMMEN TEXT -->
           <div
-            class="self-start w-full px-3 text-sm font-light leading-none md:w-11/12 xl:w-7/12 sm:text-base"
+            class="self-start w-full px-3 text-sm font-light leading-none text-gray-900 md:w-11/12 xl:w-7/12 sm:text-base"
           >
             <div class="">
               <h1 class="mb-4 text-2xl md:text-4xl md:mb-6 xl:w-4/5">
@@ -145,7 +146,7 @@
               <div class="flex-initial mt-6 md:mt-0">
                 <a href="public/build/build_pages/contact.html">
                   <button
-                    class="px-4 py-2 text-base font-bold text-white uppercase transition duration-150 bg-blue-500 rounded shadow-md hover:bg-blue-600 hover:-translate-1"
+                    class="px-4 py-2 text-base font-bold text-white uppercase transition duration-150 bg-gray-800 rounded shadow-md hover:bg-gray-900 hover:-translate-1 focus:outline-none"
                   >
                     Kontakt
                   </button>
@@ -159,9 +160,9 @@
             <h2 class="self-center text-3xl md:text-4xl">Service</h2>
             <div class="flex flex-wrap font-light">
               <div class="w-full p-3 sm:w-1/2 md:w-1/3">
-                <h4 class="text-xl leading-none text-blue-700 sm:text-2xl">
+                <h2 class="text-xl leading-none text-gray-900 sm:text-2xl">
                   Wir kaufen Ihr Fahrzeug!
-                </h4>
+                </h2>
                 <p class="text-sm md:text-base">
                   Wir kaufen und verkaufen gepflegte Fahrzeuge verschiedenster
                   Marken und Modelle. Bieten Sie uns ihr gebrauchtes Fahrzeug
@@ -169,18 +170,18 @@
                 </p>
               </div>
               <div class="w-full p-3 sm:w-1/2 md:w-1/3">
-                <h4 class="text-xl leading-none text-blue-700 sm:text-2xl">
+                <h2 class="text-xl leading-none text-gray-900 sm:text-2xl">
                   Beurteilung
-                </h4>
+                </h2>
                 <p class="text-sm md:text-base">
                   Auf Ihren Wunsch stellen wir eine qualifizierte
                   Ankaufsbewertung, sowie Begutachtung Ihres Fahrzeugs aus
                 </p>
               </div>
               <div class="w-full p-3 sm:w-1/2 md:w-1/3">
-                <h4 class="text-xl leading-none text-blue-700 sm:text-2xl">
+                <h2 class="text-xl leading-none text-gray-900 sm:text-2xl">
                   Reifenwechsel
-                </h4>
+                </h2>
                 <p class="text-sm md:text-base">
                   Durch unseren ganzjährig Reifenwechselservice können Sie sich
                   entspannt zurück lehnen, während wir die Reifen Ihres Pkws
@@ -188,9 +189,9 @@
                 </p>
               </div>
               <div class="w-full p-3 sm:w-1/2 md:w-1/3 md:pb-0">
-                <h4 class="text-xl leading-none text-blue-700 sm:text-2xl">
+                <h2 class="text-xl leading-none text-gray-900 sm:text-2xl">
                   Transport
-                </h4>
+                </h2>
                 <p class="text-sm md:text-base">
                   Abholung Ihres Fahrzeugs von Zuhause oder am Arbeitsplatz,
                   sowie Überführung Ihres Fahrzeugs mit eigenem Autotransporter
@@ -198,18 +199,18 @@
                 </p>
               </div>
               <div class="w-full p-3 sm:w-1/2 md:w-1/3 md:pb-0">
-                <h4 class="text-xl leading-none text-blue-700 sm:text-2xl">
+                <h2 class="text-xl leading-none text-gray-900 sm:text-2xl">
                   Instandsetzung und Reparatur
-                </h4>
+                </h2>
                 <p class="text-sm md:text-base">
                   Komplette Fahrzeugaufbereitung und Entfernung von Dellen oder
                   Hagelschäden
                 </p>
               </div>
               <div class="w-full p-3 sm:w-1/2 md:w-1/3 md:pb-0">
-                <h4 class="text-xl leading-none text-blue-700 sm:text-2xl">
+                <h2 class="text-xl leading-none text-gray-900 sm:text-2xl">
                   Abmeldung
-                </h4>
+                </h2>
                 <p class="text-sm md:text-base">
                   Wenn Sie es sich wünschen, melden wir Ihr Fahrzeug ab und
                   stellen Ihnen einen schriftlichen Nachweis zur verfügung
@@ -254,7 +255,7 @@
                     placeholder="Nachricht"
                   ></textarea>
                   <button
-                    class="px-6 py-2 text-lg text-white bg-blue-500 border-0 rounded focus:outline-none hover:bg-blue-600"
+                    class="px-6 py-2 text-lg text-white bg-gray-500 border-0 rounded focus:outline-none hover:bg-gray-600"
                   >
                     Absenden
                   </button>
@@ -268,36 +269,40 @@
 
       <!-- * FOOTER -->
       <footer
-        class="relative bottom-auto w-full text-white sm:bottom-0 sm:absolute"
+        class="relative bottom-auto w-full text-black lg:bottom-0 lg:absolute"
       >
         <div
-          class="flex items-center justify-between px-4 py-2 leading-relaxed bg-gray-700"
+          class="flex items-center justify-between px-4 leading-relaxed bg-gray-400"
         >
           <div class="flex-initial font-semibold text-md">
             Autocenter Lichtenfels
           </div>
           <div>
-            <ul class="flex flex-col -mx-3 text-sm font-thin sm:flex-row">
-              <li class="mx-3">
-                <a href="#" class="border-b border-gray-400 hover:underline"
+            <ul
+              class="flex-col inline-block -mx-3 text-sm font-thin sm:flex sm:flex-row"
+            >
+              <li class="mx-3 my-2">
+                <a
+                  href="#"
+                  class="my-2 border-b border-gray-700 hover:border-gray-900"
                   >Startseite</a
                 >
               </li>
-              <li class="mx-3">
+              <li class="mx-3 my-2">
                 <a
                   href="public/build/build_pages/routenplaner.html"
                   class="hover:underline"
                   >Routenplaner</a
                 >
               </li>
-              <li class="mx-3">
+              <li class="mx-3 my-2">
                 <a
                   href="public/build/build_pages/contact.html"
                   class="hover:underline"
                   >Kontakt</a
                 >
               </li>
-              <li class="mx-3">
+              <li class="mx-3 my-2">
                 <a href="#" class="hover:underline">Sitemap</a>
               </li>
             </ul>
@@ -305,7 +310,7 @@
         </div>
 
         <div
-          class="flex flex-col items-start justify-between w-full px-4 py-2 text-xs font-light bg-black sm:flex-row md:items-center"
+          class="flex flex-col items-start justify-between w-full px-4 py-3 text-xs font-light leading-relaxed bg-gray-500 sm:py-2 sm:flex-row md:items-center"
         >
           <div>
             <strong class="font-bold">Tel.: </strong>
